# agentic_engineering

./: .gitignore  AGENTS_template.md  MANIFEST.in  Makefile  README.md  pyproject.toml
agentic_engineering/: AGENTS_template.md  README.md  __init__.py
agentic_engineering/agentic/: README.md  cadence_controls.md  eval_registry.md  loop_library.md  permission_model.md  skill_registry.md  work_packet_template.md
agentic_engineering/catalog/: assurance_policy.yaml  capabilities.yaml  evidence_policy.yaml  permission_policy.yaml  risk_policy.yaml
agentic_engineering/external_knowledge/: README.md  knowledge_index.md
external_knowledge/: README.md  knowledge_index.md
learnings/: README.md  incident_postmortem_template.md  learning_log.md  process_improvement_template.md  technical_discovery_template.md
output/: README.md
program/: README.md  backlog_tracker.md  change_request_tracker.md  dependency_tracker.md  idea_intake_tracker.md  milestone_release_tracker.md  raid_log.md  release_deployment_checklist.md  requirements_tracker.md  resource_capacity_tracker.md  retrospective_action_tracker.md  stakeholder_communication_tracker.md
team/: backend_engineer.md  code_quality_reviewer.md  devops_sre_release_engineer.md  documentation_customer_feedback_owner.md  frontend_engineer.md  integration_engineer.md  product_delivery_manager.md  qa_test_automation_engineer.md  requirements_analyst.md  security_reviewer.md  solution_architect.md  ux_ui_designer.md
tests/: test_adoption.py  test_policy_validation.py  test_records.py  test_runtime.py  test_skill.py
(+112 files in other folders)
